--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Omaha Poker functionality+some features for PokerRL Reinforcement Learning card framwork" />
 <meta property="og:description" content="Omaha Poker functionality+some features for PokerRL Reinforcement Learning card framwork" />
-<link rel="canonical" href="https://diditforlulz273.github.io/PokerRL-Omaha/" />
-<meta property="og:url" content="https://diditforlulz273.github.io/PokerRL-Omaha/" />
+<link rel="canonical" href="https://diditforlulz273.github.io/" />
+<meta property="og:url" content="https://diditforlulz273.github.io/" />
 <meta property="og:site_name" content="PokerRL-Omaha" />
 <script type="application/ld+json">
-{"@type":"WebSite","headline":"PokerRL Omaha","url":"https://diditforlulz273.github.io/PokerRL-Omaha/","name":"PokerRL-Omaha","description":"Omaha Poker functionality+some features for PokerRL Reinforcement Learning card framwork","@context":"https://schema.org"}</script>
+{"@type":"WebSite","headline":"PokerRL Omaha","url":"https://diditforlulz273.github.io/","name":"PokerRL-Omaha","description":"Omaha Poker functionality+some features for PokerRL Reinforcement Learning card framwork","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-
+<meta name="google-site-verification" content="hbsHh17jOv_-Ie6GuXPxZdufJS4U6b29ZF93gTw3QYI" />
+    
   </head>
 
   <body>
