--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 id="pokerrl-omaha">PokerRL Omaha</h1>
 
 <p>A fork of the original <a href="https://github.com/EricSteinberger/PokerRL">Framework for Multi-Agent Deep Reinforcement Learning in Poker games</a> by <a href="https://github.com/EricSteinberger">Eric Steinberger</a>
-Combined with <a href="https://github.com/EricSteinberger/Deep-CFR">SD-CFR</a>.</p>
+Combined with <a href="https://github.com/EricSteinberger/Deep-CFR">SD-CFR</a> and Deep CFR.</p>
 
 <p>Now works with Omaha Poker.</p>
 
